2005-08-19  Andrew Pinski  <pinskia@physics.uc.edu>

	* Makefile.am (extra_ldflags_libjava): New variable to
	substitute in.
	(LIBLINK): Add extra_ldflags_libjava to it.
	* configure.ac (extra_ldflags_libjava): Set for *-darwin* to
	"-Wl,-single_module".
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* gcj/Makefile.in: Regenerate.
	* include/Makefile.in: Regenerate.
	* testsuite/Makefile.in: Regenerate.

2005-08-17  Tom Tromey  <tromey@redhat.com>

	* java/lang/Class.h (_Jv_IsBinaryCompatibilityABI): Declare as
	friend.
	* include/jvm.h (_Jv_IsBinaryCompatibilityABI): New function.
	* testsuite/libjava.lang/bclink.java: New file.
	* testsuite/libjava.lang/bclink.out: New file.
	* link.cc (print_class_loaded): Changed ABI test to look at
	various _syms fields.

2005-08-17  Andreas Tobler  <a.tobler@schweiz.ch>

	* testsuite/libjava.jacks/jacks.xfail: Remove 15.21-assoc-7,
	15.21-assoc-8, 15.21-equal-3, 15.28-string-11.

2005-08-16  Ranjit Mathew  <rmathew@hotmail.com>

	More testsuite adjustments for PR java/19870.
	* testsuite/libjava.lang/PR19870_2.java: New testcase.
	* testsuite/libjava.lang/PR19870_2.out: Expected output for the
	new testcase.
	* testsuite/libjava.jacks/jacks.xfail: Remove
	8.5.2-non-static-member-usage-2 and add 15.12.3-explicit-constructor-9.

2005-08-16  Tom Tromey  <tromey@redhat.com>

	* gnu/xml/xpath/XPathParser.y: Removed.

2005-08-12  Morgan Deters  <mdeters@morgandeters.com>

	PR libgcj/23353:
	* java/lang/natObject.cc (clone): Clear sync_info.

2005-07-26  Tom Tromey  <tromey@redhat.com>

	* gnu/java/net/protocol/ftp/package.html,
	gnu/javax/swing/text/html/package.html,
	gnu/javax/swing/text/html/parser/package.html,
	gnu/javax/swing/text/html/parser/models/package.html,
	gnu/javax/swing/text/html/parser/support/package.html,
	gnu/javax/swing/text/html/parser/support/low/package.html,
	gnu/xml/aelfred2/package.html, gnu/xml/dom/package.html,